<resources>
    <string name="app_name">Travel</string>
    <string name="facebooksignup">Sing Up With <b>Facebook</b></string>
    <string name="x">X</string>
    <string name="abdallah_mostafa">Abdallah Mostafa</string>
    <string name="mansoura_egypt">Mansoura, Egypt</string>
    <string name="social_networks">Social Networks</string>
    <string name="travel_guide">Travel Guide</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="feedback">Feedback</string>
    <string name="edit">Edit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_will_travel_by">You Will travel by ?</string>
    <string name="img">img</string>
</resources>
